# soundcheck-dat-reader

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
tests/: test_soundcheck_dat_reader.py
