[tool.poetry]
name = "soundcheck_dat_reader"
version = "0.1.0"
description = ""
authors = ["niklas.brundin <niklas.brundin@sigmaconnectivity.se>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
